--- a/transit/transit.css
+++ b/transit/transit.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300);
+
 html{
 	height: 100%;  
 }
@@ -10,4 +12,26 @@ body{
 
 #map-canvas{
 	height: 100%; 
+}
+
+#overlay
+{
+   background-color: #000;
+   opacity: .7;
+   filter: alpha(opacity=70);
+   position: absolute; top: 0; left: 0;
+   width: 100%; height: 100%;
+   z-index: 10;
+}
+
+p{
+	font-family: 'Roboto', sans-serif; 
+	font-weight: 100; 
+	margin: auto; 
+	margin-top: 15%; 
+	text-align: center; 
+	font-size: 60px; 
+	height: 400px;
+	width: 800px; 
+	color: white;  
 }
