--- a/transit/transit.css
+++ b/transit/transit.css
@@ -18,7 +18,6 @@ body{
 {
    background-color: #000;
    opacity: .7;
-   filter: alpha(opacity=70);
    position: absolute; top: 0; left: 0;
    width: 100%; height: 100%;
    z-index: 10;
@@ -33,5 +32,6 @@ p{
 	font-size: 60px; 
 	height: 400px;
 	width: 800px; 
-	color: white;  
+	color: white; 
+	opacity: 1;  
 }
