--- a/transit/transit.css
+++ b/transit/transit.css
@@ -45,6 +45,14 @@ table{
 	font-size: 22px; 
 }
 
+#invisible{
+	width: 200px; 
+	height: 200px;
+	position: absolute;
+	z-index: 20; 
+	background-color: white; 
+	font-size: 20px; 
+}
 
 
 
