--- a/transit/transit.css
+++ b/transit/transit.css
@@ -46,11 +46,11 @@ table{
 }
 
 #invisible{
-	width: 600px;
-	height: 100px; 
+	width: 10px;
+	height: 10px; 
 	z-index: 10;
 	position: absolute;; 
-	top: 0;
+	top: 0px;
 	left: 40px;  
 	color: black; 
 	font-size: 20px; 
