--- a/transit/transit.css
+++ b/transit/transit.css
@@ -46,12 +46,12 @@ table{
 }
 
 #invisible{
-	width: 10px;
-	height: 10px; 
+	width: 150px;
+	height: 30px; 
 	z-index: 10;
 	position: absolute;; 
 	top: 0px;
-	left: 40px;  
+	margin: auto;   
 	color: black; 
 	font-size: 20px; 
 }
