--- a/transit/transit.css
+++ b/transit/transit.css
@@ -47,13 +47,14 @@ table{
 
 #invisible{
 	position: absolute;
-	width: 800px;
-	height: 80px; 
+	width: 400px;
+	height: 50px; 
 	z-index: 10;
 	top: 0px;
+	left: 20%; 
 	margin: auto;   
 	color: black; 
-	font-size: 14px; 
+	font-size: 30px; 
 }
 
 
