--- a/transit/transit.css
+++ b/transit/transit.css
@@ -46,15 +46,18 @@ table{
 }
 
 #invisible{
+	text-align: center;
 	position: absolute;
 	width: 400px;
-	height: 50px; 
+	height: 65px; 
 	z-index: 10;
 	top: 0px;
 	left: 20%; 
 	margin: auto;   
-	color: black; 
+	color: white;
+	background-color: black;  
 	font-size: 30px; 
+	opacity: .7; 
 }
 
 
