--- a/transit/transit.css
+++ b/transit/transit.css
@@ -20,7 +20,8 @@ body{
    background-color: #000;
    opacity: .7;
    position: absolute; top: 0; left: 0;
-   width: 100%; height: 100%;
+   width: 100%; 
+   height: 100%;
    z-index: 10;
 }
 
@@ -49,7 +50,7 @@ table{
 	text-align: center;
 	position: absolute;
 	width: 400px;
-	height: 65px; 
+	height: 90px; 
 	z-index: 10;
 	top: 0px;
 	left: 20%; 
@@ -57,7 +58,8 @@ table{
 	color: white;
 	background-color: black;  
 	font-size: 30px; 
-	opacity: .7; 
+	opacity: .7;
+	font-weight: 100; 
 }
 
 
