--- a/transit/transit.css
+++ b/transit/transit.css
@@ -49,17 +49,18 @@ table{
 #invisible{
 	text-align: center;
 	position: absolute;
-	width: 400px;
-	height: 80px; 
+	width: 360px;
+	height: 65px; 
 	z-index: 10;
-	top: 0px;
+	top: 10px;
 	left: 30%; 
 	margin: auto;   
 	color: white;
 	background-color: black;  
-	font-size: 30px; 
+	font-size: 20px; 
 	opacity: .7;
 	font-weight: 300; 
+	border-radius: 10px; 
 }
 
 
